objects/Allocation_Details__c.object
<CustomObject>
    <fields>
        <fullName>Allocation_Hours__c</fullName>
        <label>Allocation Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocation_Percentage__c</fullName>
        <formula>Allocation_Hours__c /40</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Day_Year__c</fullName>
        <formula>Year_of_Month__c &amp;&apos;-&apos;&amp; TEXT( Start_Date_of_the_Week__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day &amp; Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Allocation_Details__c</fullName>
        <label>Employee Allocation Details</label>
        <referenceTo>Employee_Allocation__c</referenceTo>
        <relationshipLabel>Allocation Details</relationshipLabel>
        <relationshipName>Allocation_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Planned_Vocation_Hours__c</fullName>
        <label>Planned Vocation Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Start_Month__c</fullName>
        <formula>CASE( 
MONTH( Employee_Allocation_Details__r.Release_Name__r.Proejct_Start_Date__c ), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Start Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_End_Month__c</fullName>
        <formula>Employee_Allocation_Details__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Allocation End Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Month__c</fullName>
        <formula>Employee_Allocation_Details__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Allocation Start Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_of_the_Week__c</fullName>
        <formula>DAY(IF 
(MOD(Weekly_Start_Date__c - DATE(1900,1,8),7)=0, 
Weekly_Start_Date__c,/*Monday*/ 

IF 
(MOD(Weekly_Start_Date__c - DATE(1900,1,8),7)=1, 
Weekly_Start_Date__c-1,/*Tuesday*/ 

IF 
(MOD(Weekly_Start_Date__c - DATE(1900,1,8),7)=2, 
Weekly_Start_Date__c-2,/*Wednesday*/ 

IF 
(MOD(Weekly_Start_Date__c - DATE(1900,1,8),7)=3, 
Weekly_Start_Date__c-3,/*Thursday*/ 

IF 
(MOD(Weekly_Start_Date__c - DATE(1900,1,8),7)=4, 
Weekly_Start_Date__c-4,/*Friday*/ 

IF 
(MOD(Weekly_Start_Date__c - DATE(1900,1,8),7)=5, 
Weekly_Start_Date__c-5,/*Saturday*/ 

IF 
(MOD(Weekly_Start_Date__c - DATE(1900,1,8),7)=6, 
Weekly_Start_Date__c-6,/*Sunday*/ 

DATE(1878,1,1)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date of the Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vacation_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Vacation Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Weekly Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_of_Month__c</fullName>
        <formula>CASE(
MONTH(Weekly_Start_Date__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year of Month</label>
        <type>Text</type>
    </fields>
    <label>Allocation Details</label>
    <nameField>
        <displayFormat>AD-{0}</displayFormat>
        <label>Allocation Week</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>